# swagger/swagger.json
@@ -10,128 +10,46 @@
     },
     "basePath": "/v1",
     "paths": {
-        "/article/": {
-            "post": {
-                "tags": [
-                    "login"
-                ],
-                "description": "发布文章",
-                "operationId": "ArticleController.发布文章",
-                "parameters": [
-                    {
-                        "in": "formData",
-                        "name": "title",
-                        "description": "文章标题",
-                        "required": true,
-                        "type": "string",
-                        "default": "hello world"
-                    },
-                    {
-                        "in": "formData",
-                        "name": "userId",
-                        "description": "用户id",
-                        "required": true,
-                        "type": "integer",
-                        "format": "int64",
-                        "default": "0"
-                    },
-                    {
-                        "in": "formData",
-                        "name": "content",
-                        "description": "文章内容",
-                        "required": true,
-                        "type": "string",
-                        "default": "hello wordl content"
-                    },
-                    {
-                        "in": "formData",
-                        "name": "publishAt",
-                        "description": "发布日期",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/date"
-                        },
-                        "default": ""
-                    },
-                    {
-                        "in": "formData",
-                        "name": "viewCount",
-                        "description": "浏览次数",
-                        "required": true,
-                        "type": "integer",
-                        "format": "int64",
-                        "default": "100"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "{int}"
-                    },
-                    "403": {
-                        "description": "body is empty"
-                    }
-                }
-            }
-        },
         "/login/": {
             "post": {
                 "tags": [
                     "login"
                 ],
-                "description": "发布文章",
-                "operationId": "ArticleController.发布文章",
+                "description": "用户登录",
+                "operationId": "LoginController.用户登录",
                 "parameters": [
                     {
                         "in": "formData",
-                        "name": "title",
-                        "description": "文章标题",
+                        "name": "username",
+                        "description": "用户名",
                         "required": true,
                         "type": "string",
-                        "default": "hello world"
+                        "default": "ant"
                     },
                     {
                         "in": "formData",
-                        "name": "userId",
-                        "description": "用户id",
-                        "required": true,
-                        "type": "integer",
-                        "format": "int64",
-                        "default": "0"
-                    },
-                    {
-                        "in": "formData",
-                        "name": "content",
-                        "description": "文章内容",
+                        "name": "password",
+                        "description": "密码",
                         "required": true,
                         "type": "string",
-                        "default": "hello wordl content"
-                    },
-                    {
-                        "in": "formData",
-                        "name": "publishAt",
-                        "description": "发布日期",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/date"
-                        },
-                        "default": ""
-                    },
-                    {
-                        "in": "formData",
-                        "name": "viewCount",
-                        "description": "浏览次数",
-                        "required": true,
-                        "type": "integer",
-                        "format": "int64",
-                        "default": "100"
+                        "default": "123"
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "{int}"
+                    "1101": {
+                        "description": "参数错误"
                     },
-                    "403": {
-                        "description": "body is empty"
+                    "1102": {
+                        "description": "请求出错"
+                    },
+                    "1104": {
+                        "description": "用户名不存在"
+                    },
+                    "1105": {
+                        "description": "用户名或者密码错误"
+                    },
+                    "200": {
+                        "description": "登录成功"
                     }
                 }
             }
@@ -204,12 +122,8 @@
             "description": "Operations about User\n"
         },
         {
-            "name": "article",
-            "description": "Operations about Article\n"
-        },
-        {
             "name": "login",
-            "description": "Operations about Article\n"
+            "description": "Operations about User\n"
         }
     ]
 }
